[package]
name = "axum-mytutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version="1.36.0", feayures=["full"]}
# tower = { version="0.4.13", feayures=["full"]}
# hyper = { version="1.1.0", feayures=["full"] }
